--- a/cart.css
+++ b/cart.css
@@ -13,6 +13,7 @@ body {
 h1 {
     text-align: center;
     margin-bottom: 30px;
+    color: #ffffff;
 }
 table {
     width: 100%;
@@ -37,6 +38,7 @@ input[type="number"] {
     text-align: center;
     font-size: 20px;
     margin: 20px ;
+    color: #fff;;
 }
 .button-group {
     display: flex;
@@ -61,7 +63,7 @@ input[type="number"] {
      opacity: 0.7;
      }
 .btn-clear { 
-    background-color: rgb(255, 84, 84);
+    background-color: #AD0000;
     color: white; 
 }
 .btn-clear:hover {
